Fix focus ring overflow, remove tooltip from hidden first column

--- a/polaris-react/src/components/DataTable/DataTable.scss
+++ b/polaris-react/src/components/DataTable/DataTable.scss
@@ -343,3 +343,9 @@
     border-right: var(--p-border-divider);
   }
 }
+.TooltipContent {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
